regression-tests/test-results/gcc-10/pure2-requires-clauses.cpp.output
In file included from /home/jarzec/coding/cppfront/regression-tests/test-results/pure2-requires-clauses.cpp:7:
../include/cpp2util.h:10005:33: error: expected unqualified-id before ‘static_assert’
pure2-requires-clauses.cpp2:19:1: note: in expansion of macro ‘CPP2_REQUIRES_’
   19 | 
      | ^             
